Clean up: preparation for coming upgrade, make lib more lightweight